clusters/cl01tl/manifests/argocd/NetworkPolicy-argocd-server.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    helm.sh/chart: argocd-10.10.0
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/component: server
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/version: "v3.5.4"
  name: argocd-server
  namespace: argocd
spec:
  ingress:
    - {}
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-server
      app.kubernetes.io/instance: argocd
  policyTypes:
    - Ingress
